@@ -105,9 +105,9 @@
 
       <table class="links">
 	<tr>
-	  <th>tak</th>
-	  <th>versie</th>
-	  <th>spring naar</th>
+	  <th>Tak</th>
+	  <th>Versie</th>
+	  <th>Spring naar</th>
 	</tr>
 	
 	<tr>
@@ -120,7 +120,7 @@
 	</tr>
 
 	<tr>
-	  <td>Stabiel</td>
+	  <td>Oud</td>
 	  <td>2.4.6</td>
 	  <td>
 	    <a href="../doc/v2.4/Documentation/out-www/">Documentatie</a>,
@@ -129,7 +129,7 @@
 	</tr>
 
 	<tr>
-	  <td>Oud</td>
+	  <td>Antiek</td>
 	  <td>2.2.6</td>
 	  <td>
 	    <a href="../doc/v2.2/Documentation/out-www/">Documentatie</a>,
